wallet_core/tests_integration/tests/snapshots/gba_pid@999993598.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999993598"
expression: attributes
---
com.example.pid__given_name:
  String: Tessa
com.example.pid__family_name:
  String: Wullaert
com.example.pid__own_family_name:
  String: Wullaert
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1950-01-01
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999993598"
com.example.address__resident_street:
  String: Laan Copes van Cattenburch
com.example.address__resident_house_number:
  String: "38"
com.example.address__resident_postal_code:
  String: 2585GB
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
