wallet_core/tests_integration/tests/snapshots/gba_pid@999993665.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999993665"
expression: attributes
---
com.example.pid__given_name:
  String: Annemieke
com.example.pid__family_name:
  String: Verpalen
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1969-12-05
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999993665"
com.example.address__resident_street:
  String: Colensostraat
com.example.address__resident_house_number:
  String: "2"
com.example.address__resident_postal_code:
  String: 2572NR
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
