wallet_core/tests_integration/tests/snapshots/gba_pid@999993811.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999993811"
expression: attributes
---
com.example.pid__given_name:
  String: Babette
com.example.pid__family_name:
  String: Brandweer
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1980-01-23
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999993811"
com.example.address__resident_street:
  String: Plataanlaan
com.example.address__resident_house_number:
  String: "4"
com.example.address__resident_postal_code:
  String: 3224TT
com.example.address__resident_city:
  String: Hellevoetsluis
com.example.address__resident_country:
  String: Nederland
