wallet_core/tests_integration/tests/snapshots/gba_pid@999994542.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 171
description: "BSN: 999994542"
expression: attributes
---
given_name:
  String: Gerrit
family_name:
  String: den Braber
own_family_name:
  String: den Braber
gender:
  Gender: Male
birth_date:
  Date: 1968-03-18
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: true
bsn:
  String: "999994542"
resident_street:
  String: Schakelstraat
resident_house_number:
  String: "14"
resident_postal_code:
  String: 1014AW
resident_city:
  String: Amsterdam
resident_country:
  String: Nederland
