wallet_core/tests_integration/tests/snapshots/gba_pid@999994785.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999994785"
expression: attributes
---
com.example.pid__given_name:
  String: Anita
com.example.pid__family_name:
  String: Jansen
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1971-01-01
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999994785"
com.example.address__resident_street:
  String: Leyweg
com.example.address__resident_house_number:
  String: "1485"
com.example.address__resident_postal_code:
  String: 2548AE
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
