wallet_core/tests_integration/tests/snapshots/gba_pid@999997646.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999997646"
expression: attributes
---
com.example.pid__given_name:
  String: Jan
com.example.pid__family_name:
  String: de Vries
com.example.pid__own_family_name:
  String: de Vries
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1935-05-05
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999997646"
com.example.address__resident_street:
  String: Domstraat
com.example.address__resident_house_number:
  String: "4"
com.example.address__resident_postal_code:
  String: 3512JB
com.example.address__resident_city:
  String: Utrecht
com.example.address__resident_country:
  String: Nederland
