wallet_core/tests_integration/tests/snapshots/gba_pid@999997671.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999997671"
expression: attributes
---
com.example.pid__given_name:
  String: Frances
com.example.pid__family_name:
  String: Gooijer
com.example.pid__own_family_name:
  String: Gooijer
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1995-06-01
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999997671"
com.example.address__resident_street:
  String: Amsterdamsestraatweg
com.example.address__resident_house_number:
  String: "710"
com.example.address__resident_postal_code:
  String: 3555HX
com.example.address__resident_city:
  String: Utrecht
com.example.address__resident_country:
  String: Nederland
